modified according to the code review; fix sw.js

--- a/restaurant.html
+++ b/restaurant.html
@@ -20,9 +20,11 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+    <nav d="breadcrumb" role="navigation" aria-label="Breadcrumb">
+      <ul>
+        <li><a href="/">Home</a></li>
+      </ul>
+  </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -32,12 +34,12 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <picture id="restaurant-picture">
         <source type="image/webp">
         <img id="restaurant-img">
